--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -27,6 +27,8 @@ permalink: /terms-and-conditions
 
            <span class="reading-time" title="Estimated read time">
              {% assign words = post.content | number_of_words %}
+             {% if post.reading-time.size > 1%}
+             {{ post.reading-time }}
              {% if words < 360 %}
                1 min
              {% else %}
