--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -34,6 +34,7 @@ permalink: /terms-and-conditions
              {% else %}
                {{ words | divided_by:180 }} mins
              {% endif %}
+             {% endif %}
            </span>
 
 
