hide reading time

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -3,6 +3,7 @@ layout: page
 title: Do we agree to the terms & conditions of research
 description: This is a blub
 permalink: /terms-and-conditions
+reading-time: 
 ---
 <ul>
   {% for post in site.tags.terms-and-conditions %}
