--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 layout: default
 title: "404: Page not found"
 permalink: 404.html
+reading-time: 
 ---
 <h1>404: Page not found</h1>
 <p>Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
