--- a/all-posts.html
+++ b/all-posts.html
@@ -2,6 +2,7 @@
 layout: page
 tagline:
 description: welcome to our website, let us tell you about it here
+reading-time: 
 ---
 <ul>
   {% for post in site.posts %}
