--- a/financial-analysis.html
+++ b/financial-analysis.html
@@ -3,6 +3,7 @@ layout: page
 title: What can financial analysis tell us about publishers?
 description: Money talks, so we're listening.
 permalink: /financial-analysis
+reading-time:
 ---
 <ul>
   {% for post in site.tags.financial-analysis %}
