--- a/market-consolidation.html
+++ b/market-consolidation.html
@@ -3,6 +3,7 @@ layout: page
 title: Should we allow monopolies over research and education?
 description: Probably not, we think.
 permalink: /market-consolidation
+reading-time: 
 ---
 <ul>
   <!-- Gets post for this tag -->
