--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: page
 tagline:
 title: Community Owned Infrastructure
 description: Data and data analytics are spreading fast at higher education institutions, and the academic  community is at a critical juncture. The growing trend of publisher acquisition of critical infrastructure has underscored a pressing need to understand the changing landscape and develop actions that institutions can—individually and collectively—take to maintain and regain control of data infrastructure. These actions will determine who ultimately controls the research and education process and whether we meaningfully address inequities created by legacy players or simply recreate them in new ways. These decisions will also shape libraries role in the scholarly enterprise, now and for the future.
-c---
+reading-time: 
+---
   <h1>Reports</h1>
     <ul>
       <li><a href="{{ site.BASE_PATH }}/landscape-analysis">Landscape Analysis</a></li>
