--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -7,6 +7,6 @@ report_download: https://testurl.org
 reading-time:
 ---
 {% assign report-name = "landscape-analysis" %}
-{{report-name}}
+report-name is set to {{report-name}}
 
 <p>I should be top</p>
