--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -9,4 +9,6 @@ reading-time:
 {% assign report-name = "landscape-analysis" %}
 report-name is set to {{report-name}}
 
-<p>I should be top</p>
+<p>I should be top and i have new stuff</p>
+
+{% for post in site.categories.landscape-analysis reversed %}
