--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -6,9 +6,7 @@ permalink: /landscape-analysis
 report_download: https://testurl.org
 reading-time:
 ---
-{% assign report-name = "landscape-analysis" %}
+{% assign report-name = "site.categories.landscape-analysis" %}
 report-name is set to {{report-name}}
 
 <p>I should be top and i have new stuff</p>
-
-{% for post in site.categories.landscape-analysis reversed %}
