--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -5,6 +5,7 @@ description: This report was commissioned in response to the growing trend of co
 permalink: /landscape-analysis
 report_download: https://testurl.org
 reading-time:
+catagory: landscape-analysis
 ---
 {% assign report.name = "site.categories.landscape-analysis" %}
 report-name is set to {{report-name}}
