--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -7,7 +7,4 @@ report_download: https://testurl.org
 reading-time:
 catagory: landscape-analysis
 ---
-{% assign report.name = "site.categories.landscape-analysis" %}
-report-name is set to {{report-name}}
-
-<p>I should be top and i have new stuff</p>
+<p>I should be top and i have new stuff and by in my own catagory</p>
