--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -5,6 +5,6 @@ description: This report was commissioned in response to the growing trend of co
 permalink: /landscape-analysis
 report_download: https://testurl.org
 reading-time:
-catagory: landscape-analysis
+category: landscape-analysis
 ---
 <p>I should be top and i have new stuff and by in my own catagory</p>
