--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -5,6 +5,31 @@ description: This report was commissioned in response to the growing trend of co
 permalink: /landscape-analysis
 report_download: https://testurl.org
 reading-time:
-category: landscape-analysis
 ---
-<p>I should be top and i have new stuff and by in my own catagory</p>
+<ul style="padding-top:10%">
+  {% for post in site.categories.landscape-analysis reversed %}
+  {% if post.url %}
+  <h2>
+    <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
+  </h2>
+  <p><i>
+     <span class="reading-time" title="Estimated read time">
+      {% assign words = post.content | number_of_words %}
+      {% if post.reading-time.size > 1 %}
+         {{ post.reading-time }}
+        {% else %}
+          {% if words < 360 %}
+           1 min reading time
+          {% else %}
+           {{ words | divided_by:180 }} min reading time
+          {% endif %}
+      {% endif %}
+      </span>
+  </i></p>
+  <div>
+    {% include read_time.html %}
+    {{ post.description }}
+  </div>
+  {% endif %}
+{% endfor %}
+</ul>
