--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -8,28 +8,5 @@ report_download: https://testurl.org
 
 
   {% for post in site.categories.landscape-analysis reversed %}
-  {% if post.url %}
-  <ul style="padding-top:10%">
-  <h2>
-    <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
-  </h2>
-  <p><i>
-     <span class="reading-time" title="Estimated read time">
-      {% assign words = post.content | number_of_words %}
-      {% if post.reading-time.size > 1 %}
-         {{ post.reading-time }}
-        {% else %}
-          {% if words < 360 %}
-           1 min reading time
-          {% else %}
-           {{ words | divided_by:180 }} min reading time
-          {% endif %}
-      {% endif %}
-      </span>
-  </i></p>
-  <div>
-    {{ post.description }}
-  </div>
-  {% endif %}
-  </ul>
-{% endfor %}
+  {% include report-list.html %}
+  {% endfor %}
