--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -5,7 +5,7 @@ description: This report was commissioned in response to the growing trend of co
 permalink: /landscape-analysis
 report_download: https://testurl.org
 ---
-
+<p>I'm templated!</p>
 
   {% for post in site.categories.landscape-analysis reversed %}
   {% include report-list.html %}
