--- a/landscape-analysis.html
+++ b/landscape-analysis.html
@@ -7,5 +7,5 @@ report_download: https://testurl.org
 ---
   <!-- set the below to whatever you want and it'll generate a list -->
   {% for post in site.categories.landscape-analysis reversed %}
-  {% include report-list.html %}
+  {% include report-contents.html %}
   {% endfor %}
