maybe this is better

--- a/community-actions.html
+++ b/community-actions.html
@@ -4,7 +4,9 @@ title: Community Actions
 description: Community-based,structural actions are possible end-game solutions that may allow groups of institutions to retake control of their data infrastructure.
 permalink: /community-actions
 ---
+<article>
 <!-- set the below to whatever you want and it'll generate a list -->
 {% for post in site.tags.community-actions %}
 {% include thread-contents.html %}
 {% endfor %}
+<article>
