--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Do we agree to the terms & conditions of research
-description: This is a blub
+description: Community-owned infrastructure must not only come at a price we can sustain, but with terms that reflect our values, protect our rights, and give us control. We're tracking how these are evolving, what we should ask for, and how to get what we need.
 permalink: /terms-and-conditions
 ---
 <!-- set the below to whatever you want and it'll generate a list -->
