--- a/terms-and-conditions-new.html
+++ b/terms-and-conditions-new.html
@@ -29,8 +29,8 @@ permalink: /terms-and-conditions-new
      <!-- The most recent action posted to the thread. This would be generated with a get for the posts that's limited to one and filters by actions.    -->
 
     <h2>
-      <a href="https://josephmcarthur.github.io/infrastructure/roadmap-for-action/three-categories-of-action">Risk Mitiation</a>
+      <a href="https://josephmcarthur.github.io/infrastructure/roadmap-for-action/risk-mitigation/engage-in-open-procurement-practices">Engage in Open Procurement Practices</a>
     </h2>
      <p>
-       Risk mitigation actions can be described as those which individual academic institutions might take as a common-sense response to the increasing volumes of data collected across campuses and the rising deployment of data analytics tools
+       An important area when institutions can assert control of data is through purchasing and procurement processes. These processes should be revisited and revised to ensure that they are transparent, competitive, and fully coordinated across the institution.
      </p>
