--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 ---
 layout: page
 tagline:
-title: Community Owned Infrastructure
-description: Data and data analytics are spreading fast at higher education institutions, and the academic  community is at a critical juncture. The growing trend of publisher acquisition of critical infrastructure has underscored a pressing need to understand the changing landscape and develop actions that institutions can—individually and collectively—take to maintain and regain control of data infrastructure. These actions will determine who ultimately controls the research and education process and whether we meaningfully address inequities created by legacy players or simply recreate them in new ways. These decisions will also shape libraries role in the scholarly enterprise, now and for the future.
-reading-time:  
+title: Owning the digital and data infrastructure research and education are built on.
+description: Data and data analytics are spreading fast at higher education institutions, and the academic  community is at a critical juncture. The growing trend of publisher acquisition of critical infrastructure has underscored a pressing need to understand the changing landscape and develop actions that institutions can—individually and collectively—take to maintain and regain control of data infrastructure. These actions will determine who ultimately controls the research and education process and whether we meaningfully address inequities created by legacy players or simply recreate them in new ways.
+reading-time:
 ---
+<article>
+<div class="row">
+  <div class="col-sm-6">
+    <h1>Understand the problem</h1>
+    <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
+    <a href="" class="btn">View executive summary</a>
+    <p><a href="">View full report</p>
+  </div>
+
+  <div class="col-sm-6">
+    <h1>Understand how to fix it</h1>
+    <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
+    <a href="" class="btn">View executive summary</a>
+    <p><a href="">View full report</p>
+  </div>
+</div>
+</article>
+
+
+In early 2019, SPARC released its  Landscape Analysis, an in-depth look at how academic and scholarly publishing are changing, how the leading publishers are responding to these changes, and the implications for the academic community. Later last year, the Landscape Analysis was followed by a Roadmap for Action outlining steps the academic community might take to manage the issues surfaced in the earlier document.
+
+What does the landscape look like one year later? This document reviews the events of the past year and provides updates on both the academic publishing market landscape, as well as suggested actions for the community to consider, particularly in light of the global COVID health and economic crisis. The document also contains an appendix that reviews in more detail the market and financial performance of some key commercial publishers in 2019 and 2020, as well as their response to changes in the respective marketplaces.
+
+
+
   <h1>Reports</h1>
     <ul>
       <li><a href="{{ site.BASE_PATH }}/landscape-analysis">Landscape Analysis</a></li>
       <li><a href="{{ site.BASE_PATH }}/roadmap-for-action">Roadmap for Action</a></li>
+      <li><a href="{{ site.BASE_PATH }}/">One Year Update</a></li>
     </ul>
   <h1>Threads</h1>
     <ul>
