--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ reading-time:
     <h1>Understand the problem</h1>
     <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
     <a href="" class="btn">View executive summary</a>
-    <p><a href="">View full report</p>
+    <p><a href="">View full report</a></p>
   </div>
 
   <div class="col-sm-6">
