--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ reading-time:
 
   <div class="col-sm-6">
     <h1>Understand how to fix it</h1>
-    <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
+    <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
     <a href="" class="btn">View executive summary</a>
-    <p><a href="">View full report</p>
+    <p><a href="">View full report</a></p>
   </div>
 </div>
 </article>
