--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@ description: Data and data analytics are spreading fast at higher education inst
 reading-time:
 ---
 <article>
-<div class="row">
-  <div class="col-sm-6">
-    <h1>Understand the problem</h1>
-    <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
-    <a href="" class="btn">View executive summary</a>
-    <p><a href="">View full report</a></p>
-  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h1>Understand the problem</h1>
+      <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
+      <p>An in-depth look at how academic and scholarly publishing are changing, how the leading publishers are responding to these changes, and the implications for the academic community.</p>
+      <a href="" class="btn">View executive summary</a>
+      <p><a href="">View full report</a></p>
+    </div>
 
-  <div class="col-sm-6">
-    <h1>Understand how to fix it</h1>
-    <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
-    <a href="" class="btn">View executive summary</a>
-    <p><a href="">View full report</a></p>
+    <div class="col-sm-4">
+      <h1>Understand how to fix it</h1>
+      <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
+      <p>What steps the academic community might take to manage the issues</p>
+      <a href="" class="btn">View executive summary</a>
+      <p><a href="">View full report</a></p>
+    </div>
+
+    <div class="col-sm-4">
+      <h1>What's the situation today?</h1>
+      <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
+      <p>Reviews the events of the past year and provides updates on both the academic publishing market landscape, as well as suggested actions for the community to consider, particularly in light of the global COVID health and economic crisis</p>
+      <a href="" class="btn">View executive summary</a>
+      <p><a href="">View full report</a></p>
+    </div>
+
   </div>
-</div>
 </article>
 
 
