--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ reading-time:
 <article>
   <div class="row">
     <div class="col-sm-4">
-      <h1>Understand the problem</h1>
+      <h2>Understand the problem</h2>
       <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
       <p>An in-depth look at how academic and scholarly publishing are changing, how the leading publishers are responding to these changes, and the implications for the academic community.</p>
       <a href="" class="btn">View executive summary</a>
@@ -16,7 +16,7 @@ reading-time:
     </div>
 
     <div class="col-sm-4">
-      <h1>Understand how to fix it</h1>
+      <h2>Understand how to respond</h2>
       <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
       <p>What steps the academic community might take to manage the issues</p>
       <a href="" class="btn">View executive summary</a>
@@ -24,7 +24,7 @@ reading-time:
     </div>
 
     <div class="col-sm-4">
-      <h1>What's the situation today?</h1>
+      <h2>Understand the situation today</h2>
       <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
       <p>Reviews the events of the past year and provides updates on both the academic publishing market landscape, as well as suggested actions for the community to consider, particularly in light of the global COVID health and economic crisis</p>
       <a href="" class="btn">View executive summary</a>
