--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 ---
 layout: page
 tagline:
-title: Owning the digital and data infrastructure research and education are built on.
+title: The future of digital infrastructure for research and education is being built. Are you in control?
 description: Data and data analytics are spreading fast at higher education institutions, and the academic  community is at a critical juncture. The growing trend of publisher acquisition of critical infrastructure has underscored a pressing need to understand the changing landscape and develop actions that institutions can—individually and collectively—take to maintain and regain control of data infrastructure. These actions will determine who ultimately controls the research and education process and whether we meaningfully address inequities created by legacy players or simply recreate them in new ways.
 reading-time:
 ---
+
 <article>
   <div class="row">
+    <h1>Get briefed, fast. Understand:</h1>
     <div class="col-sm-4">
-      <h2>Understand the problem</h2>
+      <h2>the landscape</h2>
       <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
       <p>An in-depth look at how academic and scholarly publishing are changing, how the leading publishers are responding to these changes, and the implications for the academic community.</p>
       <a href="" class="btn">View executive summary</a>
@@ -16,7 +18,7 @@ reading-time:
     </div>
 
     <div class="col-sm-4">
-      <h2>Understand how to respond</h2>
+      <h2>how to respond</h2>
       <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
       <p>What steps the academic community might take to manage the issues</p>
       <a href="" class="btn">View executive summary</a>
@@ -24,7 +26,7 @@ reading-time:
     </div>
 
     <div class="col-sm-4">
-      <h2>Understand the situation today</h2>
+      <h2>the situation today</h2>
       <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
       <p>Reviews the events of the past year and provides updates on both the academic publishing market landscape, as well as suggested actions for the community to consider, particularly in light of the global COVID health and economic crisis</p>
       <a href="" class="btn">View executive summary</a>
