--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: page
 tagline:
 title: The future of digital infrastructure for research and education is being built. Are you in control?
 description: Data and data analytics are spreading fast at higher education institutions, and the academic  community is at a critical juncture. The growing trend of publisher acquisition of critical infrastructure has underscored a pressing need to understand the changing landscape and develop actions that institutions can—individually and collectively—take to maintain and regain control of data infrastructure. These actions will determine who ultimately controls the research and education process and whether we meaningfully address inequities created by legacy players or simply recreate them in new ways.
-reading-time:
 ---
 
 <article>
@@ -34,34 +33,40 @@ reading-time:
     </div>
 
   </div>
+
+  <h1>The time for action is now</h1>
+
+  <ul>
+    <li><a href="{{ site.BASE_PATH }}/risk-mitigation">Risk Mitigation</a></li>
+    <li><a href="{{ site.BASE_PATH }}/strategic-choices">Strategic Choices</a></li>
+    <li><a href="{{ site.BASE_PATH }}/community-actions">Community Actions</a></li>
+  </ul>
+
+  <h1>Understand the latest</h1>
+
+  <li><a href="{{ site.BASE_PATH }}/all-posts">Recent Posts</a></li>
+
+  <h1>Understand the issues</h1>
+
+  <ul>
+    <li><a href="{{ site.BASE_PATH }}/terms-and-conditions">Terms & Conditions</a></li>
+    <li><a href="{{ site.BASE_PATH }}/terms-and-conditions-new">Terms & Conditions TEST</a></li>
+    <li><a href="{{ site.BASE_PATH }}/market-consolidation">Market Consolidation</a></li>
+    <li><a href="{{ site.BASE_PATH }}/financial-analysis">Financial Analysis</a></li>
+  </ul>
+
+
+  <h1>Understand the companies</h1>
+
+  <ul>
+    <li><a href="{{ site.BASE_PATH }}/">Elsevier</a></li>
+    <li><a href="{{ site.BASE_PATH }}/">Wiley</a></li>
+    <li><a href="{{ site.BASE_PATH }}/">Pearson</a></li>
+    <li><a href="{{ site.BASE_PATH }}/">etc</a></li>
+  </ul>
+
+  <h1>Understand the authors</h1>
+
+  <p>Content is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="height:1.5em;" src="{{ site.BASE_PATH }}/assets/media/ccby-nice.png" /></a> by <a href="https://sparcopen.org/" target="_blank" property="cc:SPARC" rel="cc:{{ site.BASE_PATH }}"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo_black.png" alt="SPARC Logo" style="height: 1.5em;" ></a>. The code is open source on Github.</p>
+
 </article>
-
-
-In early 2019, SPARC released its  Landscape Analysis, an in-depth look at how academic and scholarly publishing are changing, how the leading publishers are responding to these changes, and the implications for the academic community. Later last year, the Landscape Analysis was followed by a Roadmap for Action outlining steps the academic community might take to manage the issues surfaced in the earlier document.
-
-What does the landscape look like one year later? This document reviews the events of the past year and provides updates on both the academic publishing market landscape, as well as suggested actions for the community to consider, particularly in light of the global COVID health and economic crisis. The document also contains an appendix that reviews in more detail the market and financial performance of some key commercial publishers in 2019 and 2020, as well as their response to changes in the respective marketplaces.
-
-
-
-  <h1>Reports</h1>
-    <ul>
-      <li><a href="{{ site.BASE_PATH }}/landscape-analysis">Landscape Analysis</a></li>
-      <li><a href="{{ site.BASE_PATH }}/roadmap-for-action">Roadmap for Action</a></li>
-      <li><a href="{{ site.BASE_PATH }}/">One Year Update</a></li>
-    </ul>
-  <h1>Threads</h1>
-    <ul>
-      <li><a href="{{ site.BASE_PATH }}/terms-and-conditions">Terms & Conditions</a></li>
-      <li><a href="{{ site.BASE_PATH }}/terms-and-conditions-new">Terms & Conditions TEST</a></li>
-      <li><a href="{{ site.BASE_PATH }}/market-consolidation">Market Consolidation</a></li>
-      <li><a href="{{ site.BASE_PATH }}/financial-analysis">Financial Analysis</a></li>
-      <li><a href="{{ site.BASE_PATH }}/risk-mitigation">Risk Mitigation</a></li>
-      <li><a href="{{ site.BASE_PATH }}/strategic-choices">Strategic Choices</a></li>
-      <li><a href="{{ site.BASE_PATH }}/community-actions">Community Actions</a></li>
-
-    </ul>
-  <h1>Recent posts</h1>
-    <ul>
-      <li><a href="{{ site.BASE_PATH }}/all-posts">Recent (All) Posts</a></li>
-    </ul>
-    Content is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="height:1.5em;" src="{{ site.BASE_PATH }}/assets/media/ccby-nice.png" /></a> by <a href="https://sparcopen.org/" target="_blank" property="cc:SPARC" rel="cc:{{ site.BASE_PATH }}"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo_black.png" alt="SPARC Logo" style="height: 1.5em;" ></a>. The code is open source on Github.</p>
