--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: Data and data analytics are spreading fast at higher education inst
 
 <article>
   <div class="row">
-    <h1>Get briefed, fast. Understand:</h1>
+    <h1>Guide your institution by understanding:</h1>
     <div class="col-sm-4">
       <h2>the landscape</h2>
       <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
