--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ description: Data and data analytics are spreading fast at higher education inst
       <img src="{{ site.BASE_PATH }}/assets/media/la_cover.png" alt="">
       <p>An in-depth look at how academic and scholarly publishing are changing, how the leading publishers are responding to these changes, and the implications for the academic community.</p>
       <a href="" class="btn">View executive summary</a>
+      <!-- If folks want to download it may be better to have "executive summary: view | download" somehow -->
       <p><a href="">View full report</a></p>
     </div>
 
