link fix for content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: Data and data analytics are spreading fast at higher education inst
       <p>An in-depth look at how academic and scholarly publishing are changing, how the leading publishers are responding to these changes, and the implications for the academic community.</p>
       <a href="" class="btn">View executive summary</a>
       <!-- If folks want to download it may be better to have "executive summary: view | download" somehow -->
-      <p><a href="">View full report</a></p>
+      <p><a href="{{ site.BASE_PATH }}/landscape-analysis">View full report</a></p>
     </div>
 
     <div class="col-sm-4">
@@ -22,7 +22,7 @@ description: Data and data analytics are spreading fast at higher education inst
       <img src="{{ site.BASE_PATH }}/assets/media/r4a_cover.png" alt="">
       <p>What steps the academic community might take to manage the issues</p>
       <a href="" class="btn">View executive summary</a>
-      <p><a href="">View full report</a></p>
+      <p><a href="{{ site.BASE_PATH }}/roadmap-for-action">View full report</a></p>
     </div>
 
     <div class="col-sm-4">
