--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@ description: Data and data analytics are spreading fast at higher education inst
     <li><a href="{{ site.BASE_PATH }}/">etc</a></li>
   </ul>
 
+  <h1>What to consider when...</h1>
+
+  <ul>
+    <li><a href="{{ site.BASE_PATH }}/">Purchasing a research information system</a></li>
+    <li><a href="{{ site.BASE_PATH }}/">Signing a big deal</a></li>
+    <li><a href="{{ site.BASE_PATH }}/">Signing up for inclusive access</a></li>
+    <li><a href="{{ site.BASE_PATH }}/">Choosing digital courseware</a></li>
+  </ul>
+
 </article>
 
   <p>Content is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="height:1.5em;" src="{{ site.BASE_PATH }}/assets/media/ccby-nice.png" /></a> by <a href="https://sparcopen.org/" target="_blank" property="cc:SPARC" rel="cc:{{ site.BASE_PATH }}"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo_black.png" alt="SPARC Logo" style="height: 1.5em;" ></a>. The code is open source on Github.</p>
