--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ description: Data and data analytics are spreading fast at higher education inst
     <li><a href="{{ site.BASE_PATH }}/">Elsevier</a></li>
     <li><a href="{{ site.BASE_PATH }}/">Wiley</a></li>
     <li><a href="{{ site.BASE_PATH }}/">Pearson</a></li>
-    <li><a href="{{ site.BASE_PATH }}/">etc</a></li>
+    <li><a href="{{ site.BASE_PATH }}/">McGraw-Hill Education</a></li>
   </ul>
 
   <h1>What to consider when...</h1>
